OMNIFOOD is responsive-Final

--- a/index..html
+++ b/index..html
@@ -34,7 +34,7 @@
     <section class="section-hero">
       <div class="hero">
         <div class="hero-text">
-          <h1 class="heading-primary">A healthy meal delivered to your door, every single day</h1>
+          <h1 class="heading-primary marg-bot">A healthy meal delivered to your door, every single day</h1>
           <p class="hero-description">The smart 365-days-per-year food subscription that will make you eat healthy again. Tailored to your personal tastes and nutritional needs. We have delivered 250,000+ meals last year!</p>
           <a href="#" class="btn hero-btn-meal margin-right-sm" >Starting Eating Well</a>
           <a href="#" class="btn hero-btn-learn">Learn more &darr;</a>
@@ -94,7 +94,7 @@
               Never again waste time thinking about what to eat! Omnifood AI will create a 100% personalized weekly meal plan just for you. It makes sure you get all the nutrients and vitamins you need, no matter what diet you follow!
             </p>
           </div>
-          <div class="step-img-box">
+          <div class="step-img-box mob-grid-1">
             <img class="step-img"  src="./content/img/app/app-screen-1.png" alt="menu displayed ona mobile phone screen">
           </div>
 
@@ -119,7 +119,7 @@
                Best chefs in town will cook your selected meal every day, and we will deliver it to your door whenever works best for you. You can change delivery schedule and address daily!
             </p>
           </div>
-          <div class="step-img-box">
+          <div class="step-img-box mob-grid-5">
             <img class="step-img"  src="./content/img/app/app-screen-3.png" alt="menu displayed ona mobile phone screen">
           </div>
         </div>
